--- a/BraveSoftware/Brave-Browser/Default/Extensions/eimadpbcbfnmbkopoojfekhnkhdbieeh/4.9.51_0/ui/popup/style.css
+++ b/BraveSoftware/Brave-Browser/Default/Extensions/eimadpbcbfnmbkopoojfekhnkhdbieeh/4.9.51_0/ui/popup/style.css
@@ -1514,6 +1514,20 @@ button {
 .news__event__link:hover {
     text-decoration: underline;
 }
+.news__event__icon {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    height: 2.5rem;
+    left: 0;
+    position: absolute;
+    top: calc(50% - 2.5rem / 2);
+    width: 2.5rem;
+}
+.news__event--has-icon {
+    padding-left: 3rem;
+}
 .news__event--unread {
     font-weight: bold;
 }
@@ -2101,43 +2115,140 @@ body {
 .mobile .news-section,
 .preview .news-section {
     background-color: #141e24;
-    border-radius: 0.9375rem;
+    border-bottom-left-radius: 0.9375rem;
+    border-bottom-right-radius: 0.9375rem;
     bottom: 0;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     height: 1.875rem;
     left: 0;
     overflow: hidden;
-    padding: 0.375rem 1rem 0.5rem 1rem;
+    padding: 0;
     position: absolute;
     text-align: center;
+    transition: height 250ms;
     user-select: none;
     white-space: nowrap;
     width: 100%;
 }
-.mobile .news-section__main-link,
-.preview .news-section__main-link {
-    box-sizing: border-box;
-    color: #53a1b3;
-    display: inline-block;
-    font-weight: bold;
-    line-height: 1rem;
-    height: 1rem;
-    overflow: hidden;
-    position: relative;
-    text-overflow: ellipsis;
+.mobile .news-section__popover,
+.preview .news-section__popover {
+    align-items: stretch;
+    background-color: #141e24;
+    display: flex;
+    flex-direction: column;
+    left: 0;
+    height: 6rem;
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    transition: opacity 250ms;
     width: 100%;
 }
-.mobile .news-section__main-link--fresh:not(:visited),
-.preview .news-section__main-link--fresh:not(:visited) {
-    color: #e96c4c;
+.mobile .news-section__popover__top,
+.preview .news-section__popover__top {
+    border-top: 0.125rem solid #316e7d;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
 }
-.mobile .news-section__main-link:hover,
-.preview .news-section__main-link:hover {
+.mobile .news-section__title,
+.preview .news-section__title {
+    color: #e96c4c;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    margin-left: 1rem;
+}
+.mobile .news-section__news,
+.preview .news-section__news {
+    align-items: center;
+    box-sizing: border-box;
+    color: #53a1b3;
+    display: flex;
+    flex-direction: row;
+    font-weight: normal;
+    justify-content: flex-start;
+    height: 2.5rem;
+    padding: 0 1rem;
+    width: 100%;
+}
+.mobile .news-section__news__icon,
+.preview .news-section__news__icon {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    flex: none;
+    height: 3rem;
+    margin-right: 0.5rem;
+    width: 3rem;
+}
+.mobile .news-section__news__text,
+.preview .news-section__news__text {
+    flex: auto;
+    font-size: 0.875rem;
+    display: inline-block;
+    line-height: 0.875rem;
+    text-align: left;
+    white-space: normal;
+}
+.mobile .news-section__news--highlight,
+.preview .news-section__news--highlight {
+    color: #e96c4c;
+    font-weight: bold;
+}
+.mobile .news-section__news:hover,
+.preview .news-section__news:hover {
     color: #ffffff;
 }
-.mobile .news-section:empty,
-.preview .news-section:empty {
-    display: none;
+.mobile .news-section__close,
+.preview .news-section__close {
+    color: #e96c4c;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.125rem;
+    height: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    user-select: none;
+    width: 1.5rem;
+}
+.mobile .news-section__close:hover,
+.preview .news-section__close:hover {
+    background-color: rgba(49, 110, 125, 0.25);
+}
+.mobile .news-section--expanded,
+.preview .news-section--expanded {
+    height: 6rem;
+}
+.mobile .news-section--expanded .news-section__popover,
+.preview .news-section--expanded .news-section__popover {
+    opacity: 1;
+    pointer-events: all;
+}
+.mobile .news-section__news--small,
+.preview .news-section__news--small {
+    bottom: 0;
+    font-weight: bold;
+    height: 1.875rem;
+    padding: 0 1rem;
+}
+.mobile .news-section__news--small .news-section__news__icon,
+.preview .news-section__news--small .news-section__news__icon {
+    height: 1.5rem;
+    margin-right: 0.25rem;
+    width: 1.5rem;
+}
+.mobile .news-section__news--small .news-section__news__text,
+.preview .news-section__news--small .news-section__news__text {
+    font-size: 0.75rem;
+    line-height: 1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .mobile .page-viewer,
 .preview .page-viewer {
